<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/theList">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:padding="6dp">
    <TextView
        android:id="@+id/validTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text ="@string/valid_time"
        android:textSize="12sp"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/cloud_coverage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text = "@string/cloud_coverage"
        android:textSize="12sp"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/temperature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text ="@string/temperature"
        android:textSize="12sp"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold" />
    </LinearLayout>
</ScrollView>